docs: chỉnh lai cấu trúc file